--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serves the same purpose the html-loader does, except operatates on compiles *.ngfactory.ts files.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --harmony --full-trace --check-leaks"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,12 @@
   "author": "Daniel Whitney",
   "license": "ISC",
   "dependencies": {
+    "fastparse": "^1.1.1",
     "loader-utils": "^0.2.16"
+  },
+  "devDependencies": {
+    "mocha": "^3.0.2",
+    "pre-commit": "^1.1.3",
+    "should": "^11.1.0"
   }
 }
